--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,7 +11,7 @@ spring:
       enabled: true
       path: /h2-console
   datasource:
-    url: jdbc:h2:file:./target/parkinglot
+    url: jdbc:h2:file:./target/minipackage
     username: sa
     password:
     driver: org.h2.Driver
